--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 3-模板方法/.idea/
 3-模板方法/dist/
 3-模板方法/node_modules/
-
+4-computed属性和watcher/.idea/
+4-computed属性和watcher/dist/
+4-computed属性和watcher/node_modules/
 
 .idea/
