--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,8 @@
 4-computed属性和watcher/.idea/
 4-computed属性和watcher/dist/
 4-computed属性和watcher/node_modules/
+5-class和style绑定/.idea/
+5-class和style绑定/dist/
+5-class和style绑定/node_modules/
 
 .idea/
