根据条件进行渲染

--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,10 @@
 5-class和style绑定/.idea/
 5-class和style绑定/dist/
 5-class和style绑定/node_modules/
-
+6-根据条件进行渲染/.idea/
+6-根据条件进行渲染/dist/
+6-根据条件进行渲染/node_modules/
+10-组件/.idea/
+10-组件/dist/
+10-组件/node_modules/
 .idea/
