--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@
 6-根据条件进行渲染/.idea/
 6-根据条件进行渲染/dist/
 6-根据条件进行渲染/node_modules/
+7-列表渲染/.idea/
+7-列表渲染/dist/
+7-列表渲染/node_modules/
 10-组件/.idea/
 10-组件/dist/
 10-组件/node_modules/
